--- a/Snake Game/Snake Game.vcxproj.filters
+++ b/Snake Game/Snake Game.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="pause_prompt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="game_over.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
